style.css
/* ... */
#search_slider_mobile #searchform #s::placeholder {
    color: #666666;
}

#search_slider_mobile #close_button {
    position: absolute;
    top: 14px;
    right: 20px;
    font-size: 26px;
}




#header_large {
    padding-left: 58px;
    height: 100vh;
    position: sticky;
    top: 0px;
}

#header_large .menu {
    list-style: none;
    margin: 0px;
    padding: 0px;
    
}

#header_large .menu .current-menu-item a {
    color: #FFFFFF;
}

#header_large .menu li {
    margin: 5px 0px;
}

#header_large .menu li a {
    color: #000000;
    text-decoration: none;
}

#header_large .menu li a:hover {
    color: #FFFFFF;
}

#header_large_logo_container img {
    height: 125px;
    margin: 30px 0px;
}



#searchform  {
    width: 75%;
    margin-top: 10px;
}

#searchform .screen-reader-text {
    display: none;
}

#searchform .col {
    padding-left: 0px;
}

#searchform #s {
    background: rgba(0, 0, 0, 0.17);
    border: none;
    border-radius: 15px;
    box-shadow: inset -1px -1px 2px #666666;
    padding: 4px;
    color: #FFFFFF;
    width: 100%;
}

#searchform #s::placeholder {
    color: #AAAAAA;
}

#searchform button {
    background: none;
    border: none;
}





#master_container {
    /*height: 100%;*/
    position: relative;
}

#background_icons_container {
    position: absolute;
    height: 100%;
    width: 94%;
}


#background_icons_container img {
    position: absolute;
    width: 55px;
}


#background_icons_container #hat_icon {
    top: 6%;
    right: 24%;
}

#background_icons_container #ruler_icon {
    top: 21%;
    right: 18%;
}

#background_icons_container #grid_icon {
    top: 24%;
    right: 4%;
}

#background_icons_container #web_icon {
    top: 43%;
    right: 3%;
}

#background_icons_container #cloud_icon {
    top: 64%;
    right: 29%;
}

#background_icons_container #loopy_icon {
    top: 79%;
    right: 19%;
}

#background_icons_container #mouse_icon {
    top: 74%;
    right: 6%;
}


#background_icons_container_small {
    position: absolute;
    height: 100%;
    width: 94%;
}

#background_icons_container_small img {
    position: absolute;
    width: 45px;
}

#background_icons_container_small #hat_icon {
    top: 16%;
    right: 42%;
}

#background_icons_container_small #ruler_icon {
    top: 30%;
    right: 34%;
}

#background_icons_container_small #grid_icon {
    top: 32%;
    right: 6%;
}

#background_icons_container_small #web_icon {
    top: 52%;
    right: 6%;
}

#background_icons_container_small #cloud_icon {
    top: 64%;
    right: 51%;
}

#background_icons_container_small #loopy_icon {
    top: 81%;
    right: 34%;
}

#background_icons_container_small #mouse_icon {
    top: 74%;
    right: 6%;
}





#page_master_container {
    padding: 20px 0px 0px 0px;
    margin-bottom: 90px;
}

@media (min-width: 768px) {
    
    #page_master_container {
        padding-right: 200px;
    }
    
    
}



#page_home_container {
    color: #FFFFFF;
    height: 70vh;
}

#page_home_blr_logo img {
    width: 50%;
}



#page_about_container {
    
}

#page_about_title {
    color: #FFFFFF;
    margin-top: 20px;
    margin-bottom: 10px;
}

#page_about_content {
    font-size: 1.1em;
}



#page_sessions_container {
    width: 100%;
}

#page_sessions_wrapper {

    width: 100%;
}


#sessions_page_track_buttons_container {
    margin-top: 0px;
    margin-left: 0px;
    margin-right: 0px;
    max-width: 85px;
}

.sessions_page_track_button {
    display: inline-block;
    text-align: center;
    cursor: pointer;
    padding: 0px 0px 15px 5px;
    min-width: 85px;
    
    
    
/*    margin-right: 46px;
    vertical-align: top;*/
}

.sessions_page_track_button img {
    width: 45px;
}

.sessions_page_track_icon_name {
    font-size: 12px;
    min-width: 85px;
    
}

@media (min-width: 768px) {
    
    #sessions_page_track_buttons_container {
    margin-top: 50px;
    margin-bottom: 20px;
    min-height: 90px;
    max-width:  none;
}
    
    .sessions_page_track_button {
        margin-left: 0px;
    }
    
    .sessions_page_track_button img {
        width: 60px;
    }
}


#sessions_page_list_container {
    width: 100%;
}




.sessions_page_card_content {
    background: linear-gradient(to right, #eff0bb, #d5d3dd);
    border-width: 4px;
    margin-bottom: 15px;
}

.sessions_page_card_avatar {
    padding: 0px;
    text-align: center;
}

.sessions_page_card_avatar a img {
    margin: 25px 5px;
    background-color: #E6E6E6;
    border-radius: 5px;
}

.sessions_page_card_right_column {
    margin: 6px 0px;
    border: 0px;
    border-left-width: 1px;
    height: 99px;
}

.sessions_page_card_title {
    font-size: 15px;
    height: 50px;
    overflow: hidden;
}

.sessions_page_card_author {
    color: #666666;
    font-size: 14px;
}

.sessions_page_card_comments_stats {
    float: right;
    display: inline-block;
}

.sessions_page_card_comments_icon {
    height: 20px;
    position: relative;
}

.sessions_page_card_comments_icon img {
    height: 25px;
    position: relative;
    top: -5px;
}

.sessions_page_card_comments_count {
    font-size: 8px;
    position: relative;
    top: -5px;
    text-align: center;
}


.sessions_page_card_attendees_stats {
    float: right;
    display: inline-block;
}

.sessions_page_card_attendees_icon {
    height: 20px;
    position: relative;
}

.sessions_page_card_attendees_icon img {
    height: 25px;
    position: relative;
    top: -5px;
}

.sessions_page_card_attendees_count {
    font-size: 8px;
    position: relative;
    top: -5px;
    text-align: center;
}


.sessions_page_card_attend_button .neo_attend_button
{
    float: right;
    display: inline-block;
    cursor: pointer;
}

.sessions_page_card_attend_button
{
    height: 20px;
    position: relative;
}

.sessions_page_card_attend_button img {
    height: 25px;
    position: relative;
    top: -5px;
}

/*.sessions_page_card_attend_button .neo_button_attending:hover
{
    background-color: #6DCF18;
}
/* ... */

